--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "dependencies": {
     "@nestjs/common": "^5.1.0",
-    "@nestjs/core": "^5.1.0", 
+    "@nestjs/core": "^5.1.0",
+    "@nestjs/mongoose": "^5.2.2",
+    "mongoose": "^5.3.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.2.2",
     "typescript": "^3.0.1"
@@ -30,6 +32,7 @@
     "@nestjs/testing": "^5.1.0",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.1",
+    "@types/mongoose": "^5.2.17",
     "@types/node": "^10.7.1",
     "@types/supertest": "^2.0.5",
     "jest": "^23.5.0",
@@ -47,7 +50,11 @@
     "webpack-node-externals": "^1.7.2"
   },
   "jest": {
-    "moduleFileExtensions": ["js", "json", "ts"],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
     "rootDir": "src",
     "testRegex": ".spec.ts$",
     "transform": {
