--- a/package.json
+++ b/package.json
@@ -22,8 +22,13 @@
   "dependencies": {
     "@nestjs/common": "^5.1.0",
     "@nestjs/core": "^5.1.0",
+    "@nestjs/jwt": "^0.2.0",
     "@nestjs/mongoose": "^5.2.2",
+    "@nestjs/passport": "^5.1.0",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.2.2",
     "typescript": "^3.0.1"
