--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/jwt": "^0.2.0",
     "@nestjs/mongoose": "^5.2.2",
     "@nestjs/passport": "^5.1.0",
+    "express-session": "^1.15.6",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.0",
     "passport": "^0.4.0",
